# JUCECmakeRepoPrototype

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  _clang-format
Apps/: CMakeLists.txt
Apps/AudioAppTemplate/Source/: Main.cpp  MainComponent.cpp  MainComponent.h
Apps/AutomaticBinaryData/: CMakeLists.txt
Apps/AutomaticBinaryData/Source/: BinaryHelper.h  Main.cpp  MainComponent.h
Apps/ConsoleAppMessageThread/: CMakeLists.txt  Main.cpp
Apps/ConsoleAppTemplate/: CMakeLists.txt
Apps/ConsoleAppTemplate/Source/: Main.cpp
Apps/CustomModuleTest/: CMakeLists.txt
Apps/CustomModuleTest/Source/: MainComponent.cpp  MainComponent.h  MainWindow.h
Apps/DifferentBinaryName/: CMakeLists.txt  DifferentBinaryName.jucer
Apps/DifferentBinaryName/JuceLibraryCode/: AppConfig.h  JuceHeader.h
Apps/DifferentBinaryName/Source/: Main.cpp
Apps/DynamicLibrary/: CMakeLists.txt
Apps/DynamicLibrary/Source/: DLL.cpp  Main.cpp
Apps/FileDragBug/: CMakeLists.txt
Apps/FileDragBug/Source/: HelloWorldLabel.h
Apps/GuiAppTemplate/: CMakeLists.txt  GuiAppTemplate.jucer
Apps/GuiAppTemplate/Source/: HelloWorldLabel.h  Main.cpp  MainComponent.cpp  MainComponent.h
Apps/GuiAppTemplate/Window/: Main.cpp
Apps/ProjectGeneratorScript/: CMakeLists.txt
Apps/ProjectGeneratorScript/Source/: Cmake.h  Git.h  Helpers.h  Main.cpp
Apps/SideThreadPaint/Source/: Main.cpp  MainComponent.h
CMake/: FindJUCE-GIT.cmake  Findjuce.cmake  GitFunctions.cmake
Cmake/: DefaultJUCEConfig.cmake  FrutHelpers.cmake  GitHelpers.cmake  JUCEHelpers.cmake
JUCE_Examples/: CMakeLists.txt
JUCE_Extras/: CMakeLists.txt
Modules/: CMakeLists.txt
Modules/custom_module_test/: custom_module_test.h
Modules/custom_module_test/Source/: DummyLabel.cpp  DummyLabel.h
Modules/shared_plugin_helpers/: shared_plugin_helpers.cpp  shared_plugin_helpers.h
Modules/shared_plugin_helpers/ProcessorBase/: AudioProcessorBase.cpp  AudioProcessorBase.h  Helpers.cpp  Helpers.h
Modules/shared_processing_code/Source/: WhiteNoise.cpp  WhiteNoise.h
Plugins/: CMakeLists.txt
Plugins/CustomStandaloneFilter/: CMakeLists.txt
Plugins/CustomStandaloneFilter/Source/: ConfigurationHelpers.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PropertiesFileOptions.h  StandaloneFilter.cpp  StandaloneFilter.h
Plugins/DummySynth/Source/: PluginProcessor.cpp  PluginProcessor.h
Plugins/MaxParametersPlugin/Source/: PluginProcessor.cpp  PluginProcessor.h
Plugins/MidiFXTemplate/: CMakeLists.txt
Plugins/MidiFXTemplate/Source/: PluginProcessor.cpp  PluginProcessor.h
Plugins/MinimalPluginTemplate/: CMakeLists.txt
Plugins/MinimalPluginTemplate/Source/: PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Plugins/MinimalPluginTemplate/Source/Helpers/: AudioProcessorBase.cpp  AudioProcessorBase.h
Plugins/NewPluginTemplate/: CMakeLists.txt
Plugins/NewPluginTemplate/Source/: Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Plugins/PluginWithCustomModule/: CMakeLists.txt
Plugins/PluginWithCustomModule/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Plugins/SpecialEffect/: CMakeLists.txt  SpecialEffect.jucer
Plugins/SpecialEffect/JuceLibraryCode/: AppConfig.h  JuceHeader.h
Plugins/SpecialEffect/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Plugins/Synth/: CMakeLists.txt  Synth.jucer
Plugins/Synth/JuceLibraryCode/: AppConfig.h  JuceHeader.h
Plugins/Synth/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Synth.h
SDKs/: CMakeLists.txt
SDKs/Cmake/: DefaultJUCEConfig.cmake  DirectoryHelpers.cmake  FrutHelpers.cmake  GitHelpers.cmake  JUCEHelpers.cmake
Tests/: CMakeLists.txt
